# rlm-claude

./: .gitignore  CHANGELOG.md  CHECKLIST_PAPER_VS_SOLUTION.md  IMPLEMENTATION_PROPOSAL.md  LICENSE  README.fr.md  README.ja.md  README.md  ROADMAP.md  SESSION_CONTEXT.md  STATE_OF_ART.md  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: ci.yml
backups/20260118_143147/: CLAUDE.md  settings.json
backups/20260118_143147/rlm_old/: chunk_state.json
context/: .gitkeep  index.template.json  session_memory.template.json  sessions.json
docs/: PHASE5_PLAN.md  PHASE8_SEMANTIC_SEARCH.md
mcp_server/: requirements.txt  server.py
mcp_server/tools/: __init__.py  fileutil.py  memory.py  navigation.py  retention.py  search.py  sessions.py  tokenizer_fr.py
scripts/: backfill_embeddings.py  benchmark_providers.py
src/mcp_server/: __init__.py  server.py
src/mcp_server/tools/: embeddings.py  memory.py  navigation.py  search.py  vecstore.py
templates/: CLAUDE_RLM_SNIPPET.md  hooks_settings.json
tests/: conftest.py  test_chunk_type.py  test_grep_fuzzy.py  test_retention.py  test_semantic.py  test_tokenizer.py
tests/integration/: __init__.py
